--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div>
-                    Eu e minha equipe usamos a ferramenta Processing para desevolver um aplicativo em Java.
+                    Nossa equipe desenvolveu um jogo em Python, chamado 'Detetive'. Onde o jogador tem finais alternativos, que dependem de suas escolhas.
                 </div>
             </div>
             <div> 
